<?xml version="1.0"?>
<package>
  <name>iop_cfg_sim_turtle_fkie</name>
  <version>1.1.0</version>
  <description>
    A very simple configuration with turtlesim to show the start with ROS/IOP-Bridge.
  </description>

  <maintainer email="Alexander.Tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <author>Alexander Tiderko</author>

  <url>https://github.com/fkie/iop_cfg_sim_turtle_fkie</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>turtlesim</run_depend>

  <run_depend>iop_discovery_fkie</run_depend>

  <!-- dependencies for robot -->
  <run_depend>iop_liveness_fkie</run_depend>
  <run_depend>iop_platform_manager_fkie</run_depend>
  <run_depend>iop_primitive_driver_fkie</run_depend>

  <!-- dependencies for control station -->
  <run_depend>iop_rqt_access_control_fkie</run_depend>
  <run_depend>iop_client_primitive_driver_fkie</run_depend>

</package>
