<?xml version="1.0"?>
<package>
  <name>fkie_iop_cfg_sim_stage</name>
  <version>1.1.0</version>
  <description>
    The configuration for simulation environment to test the basic IOP cababilities.
  </description>

  <maintainer email="Alexander.Tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <author>Alexander Tiderko</author>

  <url>https://github.com/fkie/iop_examples</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hector_mapping</run_depend>

  <run_depend>fkie_iop_client_costmap2d</run_depend>
  <run_depend>fkie_iop_client_digital_resource</run_depend>
  <run_depend>fkie_iop_client_digital_video</run_depend>
  <run_depend>fkie_iop_client_global_pose_sensor</run_depend>
  <run_depend>fkie_iop_client_global_waypoint_driver</run_depend>
  <run_depend>fkie_iop_client_global_waypoint_list_driver</run_depend>
  <run_depend>fkie_iop_client_local_pose_sensor</run_depend>
  <run_depend>fkie_iop_client_range_sensor</run_depend>
  <run_depend>fkie_iop_client_path_reporter</run_depend>
  <run_depend>fkie_iop_client_primitive_driver</run_depend>

  <run_depend>fkie_iop_costmap2d</run_depend>
  <run_depend>fkie_iop_global_pose_sensor</run_depend>
  <run_depend>fkie_iop_global_waypoint_driver</run_depend>
  <run_depend>fkie_iop_global_waypoint_list_driver</run_depend>
  <run_depend>fkie_iop_liveness</run_depend>
  <run_depend>fkie_iop_local_pose_sensor</run_depend>
  <run_depend>fkie_iop_path_reporter</run_depend>
  <run_depend>fkie_iop_platform_manager</run_depend>
  <run_depend>fkie_iop_primitive_driver</run_depend>
  <run_depend>fkie_iop_range_sensor</run_depend>

  <run_depend>fkie_iop_digital_resource_discovery</run_depend>
  <run_depend>fkie_iop_digital_video</run_depend>
  <run_depend>fkie_iop_visual_sensor</run_depend>

  <run_depend>fkie_iop_discovery</run_depend>

  <run_depend>fkie_iop_rqt_access_control</run_depend>
  <run_depend>fkie_iop_rqt_digital_resource_viewer</run_depend>

  <run_depend>geodesy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>stage_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>topic_tools</run_depend>

</package>
