<?xml version="1.0"?>
<package>
  <name>fkie_iop_cfg_sim_stage_waypoint</name>
  <version>2.1.0</version>
  <description>
    A configuration example to demonstrate waypoint navigation using ROS/IOP-Bridge in between of rviz and move_base.
  </description>

  <maintainer email="Alexander.Tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <author>Alexander Tiderko</author>

  <url>https://github.com/fkie/iop_examples</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>move_base</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>stage_ros</run_depend>

  <run_depend>fkie_iop_component</run_depend>
  <run_depend>fkie_iop_discovery</run_depend>

  <!-- dependencies for robot -->
  <run_depend>fkie_iop_liveness</run_depend>
  <run_depend>fkie_iop_platform_manager</run_depend>
  <run_depend>fkie_iop_local_waypoint_driver</run_depend>
  <run_depend>fkie_iop_local_pose_sensor</run_depend>
  <run_depend>fkie_iop_range_sensor</run_depend>

  <!-- dependencies for control station -->
  <run_depend>fkie_iop_rqt_access_control</run_depend>
  <run_depend>fkie_iop_client_local_pose_sensor</run_depend>
  <run_depend>fkie_iop_client_local_waypoint_driver</run_depend>
  <run_depend>fkie_iop_client_range_sensor</run_depend>
  <run_depend>jaustoolset</run_depend>

</package>
