<?xml version="1.0"?>
<package>
  <name>fkie_iop_cfg_sim_turtle</name>
  <version>1.1.0</version>
  <description>
    A very simple configuration with turtlesim to show the start with ROS/IOP-Bridge.
  </description>

  <maintainer email="Alexander.Tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <author>Alexander Tiderko</author>

  <url>https://github.com/fkie/iop_examples</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>turtlesim</run_depend>

  <run_depend>fkie_iop_component</run_depend>

  <run_depend>fkie_iop_liveness</run_depend>
  <!-- dependencies for robot -->
  <run_depend>fkie_iop_liveness</run_depend>
  <run_depend>fkie_iop_local_pose_sensor</run_depend>
  <run_depend>fkie_iop_platform_manager</run_depend>
  <run_depend>fkie_iop_primitive_driver</run_depend>
  <run_depend>fkie_iop_velocity_state_sensor</run_depend>

  <!-- dependencies for control station -->
  <run_depend>fkie_iop_rqt_access_control</run_depend>
  <run_depend>fkie_iop_client_local_pose_sensor</run_depend>
  <run_depend>fkie_iop_client_primitive_driver</run_depend>
  <run_depend>fkie_iop_client_velocity_state_sensor</run_depend>
  <run_depend>jaustoolset</run_depend>

</package>
