<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_cfg_sim_turtle</name>
  <version>1.1.0</version>
  <description>
    A very simple configuration with turtlesim to show the start with ROS/IOP-Bridge.
  </description>

  <maintainer email="Alexander.Tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <author>Alexander Tiderko</author>

  <url>https://github.com/fkie/iop_examples</url>

  <depend>ament_index_python</depend>

  <depend>nav_msgs</depend>
  <depend>rqt_gui</depend>
  <depend>turtlesim</depend>

  <!-- dependencies for robot -->
  <depend>fkie_iop_liveness</depend>
  <depend>fkie_iop_local_pose_sensor</depend>
  <depend>fkie_iop_platform_manager</depend>
  <depend>fkie_iop_primitive_driver</depend>
  <depend>fkie_iop_velocity_state_sensor</depend>

  <!-- dependencies for control station -->
  <depend>fkie_iop_rqt_access_control</depend>
  <depend>fkie_iop_client_local_pose_sensor</depend>
  <depend>fkie_iop_client_primitive_driver</depend>
  <depend>fkie_iop_client_velocity_state_sensor</depend>
  <depend>jaustoolset</depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
