<?xml version="1.0"?>
<package>
  <name>fkie_iop_cfg_sim_video</name>
  <version>1.1.0</version>
  <description>
     Configuration shows how to use video with ROS/IOP-Bridge.
  </description>

  <maintainer email="Alexander.Tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <author>Alexander Tiderko</author>

  <url>https://github.com/fkie/iop_examples</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rqt_gui</run_depend>

  <run_depend>fkie_iop_discovery</run_depend>

  <!-- dependencies for robot -->
  <run_depend>fkie_iop_digital_resource_discovery</run_depend>
  <run_depend>fkie_iop_digital_video</run_depend>
  <run_depend>fkie_iop_liveness</run_depend>
  <run_depend>fkie_iop_platform_manager</run_depend>
  <run_depend>fkie_iop_visual_sensor</run_depend>

  <!-- dependencies for control station -->
  <run_depend>fkie_iop_client_digital_resource</run_depend>
  <run_depend>fkie_iop_client_digital_video</run_depend>
  <run_depend>fkie_iop_rqt_access_control</run_depend>
  <run_depend>fkie_iop_rqt_digital_resource_viewer</run_depend>

</package>
